--- a/css/borders.css
+++ b/css/borders.css
@@ -48,6 +48,11 @@
   padding: 0 0 50px 50px;
 }
 
+.border-bottom-right {
+  /* top right bottom left */
+  padding: 0 50px 50px 0;
+}
+
 .border-left-right {
   /* top right bottom left */
   padding: 0 50px 0 50px;
